# music-recommender

./: CMakeLists.txt  Makefile  README.md  config.hpp  data.cpp  data.hpp  main.cpp  parallel-executor.cpp  parallel-executor.hpp  queue.hpp  recommendation-engine.cpp  recommendation-engine.hpp  recommender.cpp  recommender.hpp
v2/: CMakeLists.txt  config.hpp  data.cpp  main.cpp  recommender.cpp
